--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -136,4 +136,98 @@ textarea::-webkit-outer-spin-button {
   line-height: 0;
   overflow: hidden;
   text-indent: -9999px;
+}
+
+.header-area {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #03c75a;
+  color: #fff;
+  z-index: 5000;
+}
+
+.place-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.place-header .place-title {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 600;
+}
+.place-header .link-back {
+  display: flex;
+}
+.place-header .my-orders {
+  font-size: 15px;
+  font-weight: 700;
+  padding-right: 18px;
+}
+
+.dimmed-layer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+}
+
+.order-type-popup {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  padding: 32px 0 40px 0;
+  z-index: 10000;
+  text-align: center;
+  border-radius: 16px 16px 0 0;
+}
+
+.title {
+  font-size: 20px;
+  font-weight: 700;
+  color: #000;
+}
+
+.type-list {
+  margin-top: 32px;
+  display: flex;
+}
+
+.type-item {
+  flex: 1;
+}
+.type-item + .type-item {
+  border-left: 1px solid #f2f2f2;
+}
+
+.icon {
+  width: 100px;
+  height: auto;
+}
+
+.desc {
+  margin-top: 8px;
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 1.5;
+  color: #000;
+}
+
+.btn-selection {
+  margin-top: 10px;
+  padding: 6px 18px;
+  font-size: 16px;
+  font-weight: 700;
+  background-color: #424242;
+  color: #fff;
+  border-radius: 28px;
+  display: inline-block;
 }/*# sourceMappingURL=styles.css.map */
