--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   min-width: 320px;
   line-height: normal;
@@ -138,6 +139,30 @@ textarea::-webkit-outer-spin-button {
   text-indent: -9999px;
 }
 
+.scroll-x {
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch; /* 모바일에서 스크롤 할 때 가속도*/
+  -ms-text-overflow-style: none; /* ie 에서 스크롤바 안 보이가 */
+  scrollbar-width: none; /* 파폭 스크롤바 안 보이게 */
+}
+.scroll-x::-webkit-scrollbar { /* 크롬 스크롤바 안 보이게 */
+  display: none;
+}
+
+.scroll-y {
+  overflow-x: hidden;
+  overflow-y: auto;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch; /* 모바일에서 스크롤 할 때 가속도*/
+  -ms-text-overflow-style: none; /* ie 에서 스크롤바 안 보이가 */
+  scrollbar-width: none; /* 파폭 스크롤바 안 보이게 */
+}
+.scroll-y::-webkit-scrollbar { /* 크롬 스크롤바 안 보이게 */
+  display: none;
+}
+
 .header-area {
   position: fixed;
   top: 0;
@@ -153,7 +178,7 @@ textarea::-webkit-outer-spin-button {
   align-items: center;
   justify-content: space-between;
 }
-.place-header .place-title {
+.place-header .title {
   display: flex;
   align-items: center;
   font-size: 20px;
@@ -166,6 +191,46 @@ textarea::-webkit-outer-spin-button {
   font-size: 15px;
   font-weight: 700;
   padding-right: 18px;
+}
+
+.place-tab {
+  display: flex;
+  height: 46px;
+  background-color: #03b753;
+}
+.place-tab .tab-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 8px;
+}
+.place-tab .tab {
+  flex: 1;
+  padding: 0 12px;
+  text-align: center;
+  opacity: 0.7;
+  font-size: 16px;
+}
+.place-tab .tab.is-active {
+  font-weight: 700;
+  opacity: 1;
+}
+.place-tab .tab.is-active .txt::after {
+  content: " ";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  background-color: #fff;
+}
+.place-tab .tab .txt {
+  position: relative;
+  display: inline-block;
+  padding: 0 4px;
+  line-height: 46px;
 }
 
 .dimmed-layer {
@@ -189,8 +254,7 @@ textarea::-webkit-outer-spin-button {
   text-align: center;
   border-radius: 16px 16px 0 0;
 }
-
-.title {
+.order-type-popup .title {
   font-size: 20px;
   font-weight: 700;
   color: #000;
@@ -230,4 +294,35 @@ textarea::-webkit-outer-spin-button {
   color: #fff;
   border-radius: 28px;
   display: inline-block;
+}
+
+.order-info-area {
+  padding: 10px 18px 20px;
+  border: 1px solid rgba(0, 0, 0, 0.04);
+  background-color: #f9f9f9;
+}
+.order-info-area .info-main-title {
+  line-height: 39px;
+}
+.order-info-area .title {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: -0.3px;
+  color: #333;
+}
+.order-info-area .title .ico-n-logo {
+  margin-right: 6px;
+  width: 24px;
+  height: 24px;
+}
+
+.container {
+  padding-top: 94px;
+}
+
+.common-inner {
+  margin: 0 auto;
+  max-width: 720px;
 }/*# sourceMappingURL=styles.css.map */
