--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -3,3 +3,5 @@ $font-default: -apple-system, BlinkMacSystemFont, helvetica, Apple SD Gothic Neo
 
 // size
 $m-padding: 18px;
+$place-tab-height: 46px;
+$place-header-height: 48px;
