--- a/assets/scss/components/_header_area.scss
+++ b/assets/scss/components/_header_area.scss
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: space-between;
 
-  .place-title{
+  .title{
     display: flex;
     align-items: center;
     font-size: 20px;
@@ -30,3 +30,49 @@
     padding-right: $m-padding;
   }
 }
+
+.place-tab {
+  display: flex;
+  height: $place-tab-height;
+  background-color: #03b753;
+
+  .tab-inner{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 8px;
+  }
+  
+  .tab{
+    flex: 1;
+    padding: 0 12px;
+    text-align: center;
+    opacity: 0.7;
+    font-size: 16px;
+
+    &.is-active {
+      font-weight: 700;
+      opacity: 1;
+
+      .txt::after{
+        content: ' ';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0px;
+        right: 0px;
+        bottom: 0px;
+        background-color: #fff;
+      }
+    }
+
+    .txt{
+      position: relative;
+      display: inline-block;
+      padding: 0 4px;
+      line-height: $place-tab-height;
+    }
+  }
+}
+
