--- a/assets/scss/components/_order_info_area.scss
+++ b/assets/scss/components/_order_info_area.scss
@@ -23,4 +23,67 @@
   }
 }
 
+.tab-switch-box{
+  display: flex;
+  align-items: center;
+  margin-top: 12px;
 
+  .tab-switch{
+    flex: 1;
+    background-color: $booking-color-bg158;
+    line-height: 40px;
+    text-align: center;
+    letter-spacing: -0.3px;
+    font-weight: 700;
+    color: #666;
+
+    &.is-active{
+      flex-grow: 1.2; /* 원래는 flex:1; 인데 flex-grow를 줘서 얘만 1.2로 간격을 넓힘 */
+      border: 1px solid $booking-color-border145;
+      background-color: $booking-color-bg157;
+      font-size: 15px;
+      color: $booking-color-text126;
+      box-shadow: 0 2px 3px 0 rgba(0,0,0,0.05);
+      position: relative;
+      
+      &::after{
+        content: '';
+        background-color: $booking-color-bg157;
+        position: absolute;
+        bottom: -10px;
+        left: 50%;
+        width: 10px;
+        height: 10px;
+        border: 1px solid;
+        border-width: 0 1px 1px 0;
+        transform: rotate(45deg) translateX(-50%);
+      }
+
+      .ico-check{
+        display: inline-block;
+        vertical-align: middle;
+        margin-left: 4px;
+      }
+    }
+
+    .ico-check{
+      display: none;
+    }
+  }
+}
+
+.info-main-notice{
+  display: flex;
+  align-items: center;
+  margin-top: 16px;
+  padding: 12px 16px;
+  background-color: #fff;
+  font-size: 14px;
+  letter-spacing: -0.3px;
+  color: #333;
+
+  &.alert{
+    color: $point-color;
+    font-weight: 700;
+  }
+}
