--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -5,3 +5,4 @@ $font-default: -apple-system, BlinkMacSystemFont, helvetica, Apple SD Gothic Neo
 $m-padding: 18px;
 $place-tab-height: 46px;
 $place-header-height: 48px;
+$header-height : $place-tab-height + $place-header-height;
