--- a/assets/scss/pages/_order_page.scss
+++ b/assets/scss/pages/_order_page.scss
@@ -1,5 +1,6 @@
 .container{
-  padding-top: $place-tab-height + $place-header-height;
+  padding-top: $header-height;
+  background-color: $booking-color-border151;
 }
 
 .common-inner{
