--- a/assets/scss/components/_menu_category_area.scss
+++ b/assets/scss/components/_menu_category_area.scss
@@ -1,62 +1,63 @@
-.menu-category-area{
+.menu-category-area {
   position: sticky;
   top: $header-height;
   margin-top: 10px;
   background-color: #fff;
 
-  .common-inner{
+  .common-inner {
     border-bottom: 1px solid $booking-color-border144;
     position: relative;
 
-    &::before{
+    &::before {
       content: '';
       position: absolute;
       top: 0;
       left: 0;
       width: $m-padding;
       height: 100%;
-      background-image:linear-gradient(to right, white, rgba(0,0,0,0));
+      background-image: linear-gradient(to right, white, rgba(0, 0, 0, 0));
       pointer-events: none; // 클릭 이벤트 방지
       z-index: 1;
     }
 
-    &::after{
+    &::after {
       content: '';
       position: absolute;
       top: 0;
       right: 0;
       width: $m-padding;
       height: 100%;
-      background-image:linear-gradient(to left, white, rgba(0,0,0,0));
+      background-image: linear-gradient(to left, white, rgba(0, 0, 0, 0));
       pointer-events: none; // 클릭 이벤트 방지
       z-index: 1;
     }
   }
 
-  .category-list{
+  .category-list {
     display: flex;
     align-items: center;
     height: 54px;
   }
 
-  .category-item{
-    &:first-child{
+  .category-item {
+    &:first-child {
       padding-left: $m-padding;
     }
 
-    &:last-child{
+    &:last-child {
       padding-right: $m-padding;
     }
   }
 
-  .category-tab{
+  .category-tab {
     display: flex;
     align-items: center;
     padding: 0 12px;
     font-size: 16px;
     height: 30px;
     color: $booking-color-text16;
-    &.is-active{
+
+    &.is-active {
       background-color: $booking-color-bg165;
       font-weight: 700;
       border-radius: 15px;
