--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -6,3 +6,4 @@ $m-padding: 18px;
 $place-tab-height: 46px;
 $place-header-height: 48px;
 $header-height : $place-tab-height + $place-header-height;
+$order-box-area-height : 70px;
