--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -259,33 +259,28 @@ textarea::-webkit-outer-spin-button {
   font-weight: 700;
   color: #000;
 }
-
-.type-list {
+.order-type-popup .type-list {
   margin-top: 32px;
   display: flex;
 }
-
-.type-item {
+.order-type-popup .type-item {
   flex: 1;
 }
-.type-item + .type-item {
+.order-type-popup .type-item + .type-item {
   border-left: 1px solid #f2f2f2;
 }
-
-.icon {
+.order-type-popup .icon {
   width: 100px;
   height: auto;
 }
-
-.desc {
+.order-type-popup .desc {
   margin-top: 8px;
   font-size: 15px;
   font-weight: 600;
   line-height: 1.5;
   color: #000;
 }
-
-.btn-selection {
+.order-type-popup .btn-selection {
   margin-top: 10px;
   padding: 6px 18px;
   font-size: 16px;
@@ -478,6 +473,7 @@ textarea::-webkit-outer-spin-button {
   top: 94px;
   margin-top: 10px;
   background-color: #fff;
+  z-index: 5500;
 }
 .menu-category-area .common-inner {
   border-bottom: 1px solid #f2f2f2;
@@ -558,12 +554,12 @@ textarea::-webkit-outer-spin-button {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 .menu-list-area .title-area {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
 }
 .menu-list-area .title {
   font-size: 19px;
@@ -576,6 +572,9 @@ textarea::-webkit-outer-spin-button {
   letter-spacing: -0.3px;
   color: #242424;
 }
+.menu-list-area .period .ico-period {
+  padding-right: 10px;
+}
 .menu-list-area .period::before {
   content: "";
   display: inline-block;
@@ -587,12 +586,279 @@ textarea::-webkit-outer-spin-button {
   vertical-align: middle;
 }
 
+.menu-list {
+  width: 100%;
+}
+.menu-list .menu-item {
+  display: flex;
+  align-items: center;
+  padding: 18px;
+  margin: 0 -18px;
+}
+.menu-list .menu-item:not(:last-child) {
+  border-bottom: 1px solid #f2f2f2;
+}
+.menu-list .menu-item .menu-detail {
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
+.menu-list .menu-item .menu-detail .menu-image-area {
+  position: relative;
+  flex-shrink: 0;
+  margin-right: 12px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.menu-list .menu-item .menu-detail .menu-image-area:not(.no-img)::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.06);
+}
+.menu-list .menu-item .menu-detail .menu-image-area .menu-img {
+  display: block;
+}
+.menu-list .menu-item .menu-detail .meni-desc {
+  margin-top: 4px;
+  letter-spacing: 0.4px;
+  color: #8f8f8f;
+  font-size: 14px;
+  line-height: 19px;
+  max-height: 38px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical; /* autoprefixer : off */
+}
+.menu-list .menu-item .menu-detail .menu-price {
+  margin-top: 4px;
+  line-height: 1.4;
+  font-size: 15px;
+  font-weight: 700;
+  color: #ff3d3b;
+}
+.menu-list .menu-item .btn-cart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 16px;
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  border: 1px solid #e5e5e5;
+  position: relative;
+}
+.menu-list .menu-item .btn-cart .ico-cart {
+  width: 20px;
+  height: 20px;
+}
+.menu-list .menu-item .btn-cart .num {
+  position: absolute;
+  top: 3px;
+  right: 3px;
+  line-height: 18px;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background-color: #ff3d3b;
+  color: #fff;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 700;
+}
+.menu-list .menu-item .btn-cart.diabled {
+  font-size: 12px;
+  border: 0;
+  color: #777;
+  background-color: #eee;
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
+.menu-name-group {
+  display: flex;
+  align-items: center;
+}
+.menu-name-group .menu-name {
+  line-height: 22px;
+  font-weight: 700;
+  color: #333;
+  font-size: 17px;
+}
+.menu-name-group .ico-new {
+  margin-left: 4px;
+}
+.menu-name-group .badge-popular {
+  margin-left: 4px;
+}
+
+.menu-info-group {
+  display: flex;
+  flex-shrink: 0;
+  margin-top: 4px;
+  font-size: 14px;
+}
+.menu-info-group .menu-grade {
+  flex-shrink: 0;
+  font-weight: 700;
+  color: #333;
+}
+.menu-info-group .menu-grade .ico-star {
+  margin-right: 2px;
+}
+.menu-info-group .menu-grade + .menu-number-of-order::before {
+  content: "";
+  display: inline-block;
+  width: 1px;
+  height: 12px;
+  margin: 0 8px;
+  background-color: #ededed;
+  transform: translateY(1px);
+}
+.menu-info-group .menu-number-of-order {
+  color: #8f8f8f;
+}
+.menu-info-group .menu-number-of-order em {
+  font-style: normal;
+  font-weight: 700;
+  color: #333;
+  margin-left: 4px;
+}
+
+.order-box-area {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  height: 70px;
+  border: 1px solid #e8e8e8;
+  box-shadow: 0 0 6px 4px rgba(0, 0, 0, 0.03);
+  background-color: #fff;
+  z-index: 9100;
+}
+.order-box-area .common-inner {
+  display: flex;
+  justify-content: space-between;
+  padding: 12px 18px;
+}
+.order-box-area .common-inner .menu-name {
+  font-size: 15px;
+  color: #333;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.order-box-area .common-inner .menu-price {
+  font-size: 18px;
+  font-weight: 700;
+  color: #ff3d3b;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.order-box-area .common-inner .btn-order {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 128px;
+  height: 46px;
+  border-radius: 5px;
+  background-image: linear-gradient(to right, #01d760, #0ad18e);
+  color: #fff;
+  font-weight: 700;
+  letter-spacing: -0.3px;
+}
+.order-box-area .common-inner .icon {
+  position: relative;
+  margin-left: 6px;
+}
+.order-box-area .common-inner .ico-cart {
+  width: 20px;
+  height: 20px;
+}
+.order-box-area .common-inner .num {
+  position: absolute;
+  top: -5px;
+  right: -4px;
+  width: 16px;
+  height: 16px;
+  background-color: #ff3d3b;
+  color: #fff;
+  border-radius: 50%;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 16px;
+  text-align: center;
+}
+
+.go-to-top {
+  padding: 16px 0 32px;
+  background-color: #fff;
+  text-align: center;
+}
+.go-to-top .link {
+  display: inline-block;
+  border-radius: 20px;
+  padding: 8px 20px;
+  border: 1px solid #e5e5e5;
+  background-color: #fff;
+  font-weight: 700;
+  font-size: 14px;
+  color: #666;
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.04);
+  text-transform: uppercase;
+}
+.go-to-top .ico-up {
+  position: relative;
+  display: inline-block;
+  margin-left: 4px;
+  width: 10px;
+  height: 10px;
+}
+.go-to-top .ico-up::before {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  border-top: 2px solid #666;
+  border-left: 2px solid #666;
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+.go-to-top .ico-up::after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 50%;
+  width: 2px;
+  height: 9px;
+  background-color: #666;
+  transform: translateX(-50%);
+}
+
 .container {
   padding-top: 94px;
+  padding-bottom: 70px;
   background-color: #f4f7f9;
 }
 
 .common-inner {
   margin: 0 auto;
   max-width: 720px;
+}
+
+.badge-popular {
+  display: inline-block;
+  padding: 0 5px;
+  border-radius: 10px;
+  font-size: 11px;
+  line-height: 16px;
+  font-weight: 700;
+  color: #fff;
+  background-color: #ff61a7;
 }/*# sourceMappingURL=styles.css.map */
