--- a/assets/scss/abstracts/_mixin_common.scss
+++ b/assets/scss/abstracts/_mixin_common.scss
@@ -3,3 +3,15 @@
   white-space: nowrap;
   overflow: hidden;
 }
+
+@mixin multi-ellipse($font-size, $line-height, $lines){
+  font-size: $font-size;
+  line-height: $line-height;
+  max-height: $line-height * $lines;
+  overflow: hidden; // ie 까지 처리
+  display: -webkit-box;
+  -webkit-line-clamp: $lines;
+  -webkit-box-orient: vertical; /* autoprefixer : off */
+  // -webkit-box-orient: vertical; box 흐름 vertical 로 제어 , autoprefixer : off 주석 꼭 같이 써주기
+}
+  
