--- a/assets/scss/pages/_order_page.scss
+++ b/assets/scss/pages/_order_page.scss
@@ -1,10 +1,21 @@
 .container{
   padding-top: $header-height;
+  padding-bottom: $order-box-area-height;
   background-color: $booking-color-border151;
 }
 
 .common-inner{
   margin: 0 auto;
   max-width: 720px;
-  
+}
+
+.badge-popular{
+  display: inline-block;
+  padding: 0 5px;
+  border-radius: 10px;
+  font-size: 11px;
+  line-height: 16px;
+  font-weight: 700;
+  color: #fff;
+  background-color: #ff61a7;
 }
