231001 order amount, review img

--- a/assets/scss/components/detail/_menu_detail_area.scss
+++ b/assets/scss/components/detail/_menu_detail_area.scss
@@ -1,56 +1,58 @@
-.menu-detail-area{
+.menu-detail-area {
   background-color: #fff;
-  
-  .menu-img{
+
+  .menu-img {
     position: relative;
     height: 300px;
     background-color: #f8fafb;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.03);
-    &::before{
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.03);
+
+    &::before {
       content: '';
       position: absolute;
       top: 0;
       left: 0;
       right: 0;
       height: 130px;
-      background-image: linear-gradient(to bottom, #000, rgba(0,0,0,0));
+      background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0));
       z-index: 1;
       opacity: 0.2;
     }
-    &::after{
+
+    &::after {
       content: '';
       position: absolute;
       bottom: 0;
       left: 0;
       right: 0;
       height: 65px;
-      background-image: linear-gradient(to top, #000, rgba(0,0,0,0));
+      background-image: linear-gradient(to top, #000, rgba(0, 0, 0, 0));
       z-index: 1;
       opacity: 0.2;
     }
   }
-   
+
   //메뉴 정보 영역
-  .menu-info-area{
+  .menu-info-area {
     padding: 0 $m-padding 20px;
-    
-    .common-inner{
+
+    .common-inner {
       margin-top: -20px;
       position: relative;
       z-index: 1;
       background-color: #fff;
       border-radius: 5px;
-      box-shadow: 0 0 4px 3px rgba(0,0,0,0.04);
+      box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.04);
       padding: 18px;
     }
 
-    .menu-info-group{
-      margin-top:5px ;
+    .menu-info-group {
+      margin-top: 5px;
 
-      .menu-price{
+      .menu-price {
         line-height: 24px;
         font-size: 19px;
         font-weight: 700;
@@ -58,7 +60,7 @@
       }
 
       .menu-grade::before,
-      .menu-number-of-order::before{
+      .menu-number-of-order::before {
         content: '';
         display: inline-block;
         height: 12px;
@@ -69,16 +71,116 @@
       }
 
       .menu-grade,
-      .menu-number-of-order{
+      .menu-number-of-order {
         line-height: 24px;
       }
     }
-    
-    .menu-disc{
+
+    .menu-disc {
       margin-top: 12px;
       font-size: 15px;
       line-height: 22px;
       color: $booking-color-text6;
+    }
+  }
+
+  //메뉴 주문 영역
+  .order-type-area {
+    margin-top: 20px;
+    padding-top: 20px;
+    border-top: $booking-color-border160;
+
+    .type-select,
+    .type-amoount {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .type-select {
+      .title {
+        display: flex;
+        align-items: center;
+        font-weight: 700;
+        font-size: 15px;
+        letter-spacing: -0.3px;
+        color: $booking-color-text6;
+
+        .ico-n-logo {
+          margin-right: 4px;
+          width: 20px;
+        }
+      }
+
+      .tab-switch-box {
+        margin-top: 0;
+        width: 160px;
+        border-radius: 3px;
+        overflow: hidden;
+
+        .tab-switch {
+          width: 80px;
+          line-height: 37px;
+          font-size: 13px;
+
+          &.is-active {
+            flex: 1;
+            border-radius: 3px;
+
+            &::after {
+              display: none;
+            }
+          }
+
+          &+.tab-switch {
+            // .tab-switch 2개 이상일 때 
+            position: relative;
+
+            &::before {
+              //2번째 거 ~~ before
+              content: '';
+              position: absolute;
+              top: 10px;
+              left: 0;
+              width: 1px;
+              height: 17px;
+              background-color: #e7e7e7;
+            }
+          }
+        }
+      }
+    }
+
+    .type-amount {
+      margin-top: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .title {
+        font-weight: 700;
+        font-size: 14px;
+        letter-spacing: -0.3px;
+        color: $booking-color-text6;
+      }
+    }
+
+    .btn-order {
+      display: block;
+      margin-top: 20px;
+      width: 100%;
+      line-height: 46px;
+      font-weight: 700;
+      border-radius: 3px;
+      background-color: $green;
+      color: #fff;
+      padding: 0 16px;
+      @include ellipsis;
+
+      &:disabled{
+        background-color: #c9c9c9;
+        color: $booking-color-text131;
+      }
     }
   }
 }
