--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -376,6 +376,73 @@ textarea::-webkit-outer-spin-button {
   margin-left: 4px;
 }
 
+.amount-select {
+  display: flex;
+  align-items: center;
+  height: 35px;
+}
+.amount-select .btn-minus,
+.amount-select .btn-plus {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #dadee3;
+  background-color: #f8fafb;
+  color: #333;
+  width: 35px;
+  height: 35px;
+}
+.amount-select .btn-minus.enabled,
+.amount-select .btn-plus.enabled {
+  border-color: #00d780;
+  background-color: #00d780;
+  color: #fff;
+}
+.amount-select .btn-minus:disabled,
+.amount-select .btn-plus:disabled {
+  color: #eee;
+}
+.amount-select .btn-minus::before,
+.amount-select .btn-plus::before {
+  content: "";
+  display: block;
+  width: 13px;
+  height: 1px;
+  background-color: currentColor;
+}
+.amount-select .btn-minus {
+  border-radius: 3px 0 0 3px;
+}
+.amount-select .btn-plus {
+  border-radius: 0 3px 3px 0;
+}
+.amount-select .btn-plus::after {
+  content: "";
+  display: block;
+  width: 1px;
+  height: 13px;
+  background-color: currentColor;
+  position: absolute;
+  right: 50%;
+  transform: translateX(-50%);
+}
+.amount-select .amount {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+  width: 50px;
+  font-weight: 700;
+  color: #242424;
+  border-top: 1px solid #e3e3e3;
+  border-bottom: 1px solid #e3e3e3;
+}
+.amount-select .amount.disabled {
+  font-weight: 400;
+  color: #c9c9c9;
+}
+
 .dimmed-layer {
   position: fixed;
   top: 0;
@@ -916,6 +983,142 @@ textarea::-webkit-outer-spin-button {
   font-size: 15px;
   line-height: 22px;
   color: #333;
+}
+.menu-detail-area .order-type-area {
+  margin-top: 20px;
+  padding-top: 20px;
+  border-top: #f2f2f2;
+}
+.menu-detail-area .order-type-area .type-select,
+.menu-detail-area .order-type-area .type-amoount {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu-detail-area .order-type-area .type-select .title {
+  display: flex;
+  align-items: center;
+  font-weight: 700;
+  font-size: 15px;
+  letter-spacing: -0.3px;
+  color: #333;
+}
+.menu-detail-area .order-type-area .type-select .title .ico-n-logo {
+  margin-right: 4px;
+  width: 20px;
+}
+.menu-detail-area .order-type-area .type-select .tab-switch-box {
+  margin-top: 0;
+  width: 160px;
+  border-radius: 3px;
+  overflow: hidden;
+}
+.menu-detail-area .order-type-area .type-select .tab-switch-box .tab-switch {
+  width: 80px;
+  line-height: 37px;
+  font-size: 13px;
+}
+.menu-detail-area .order-type-area .type-select .tab-switch-box .tab-switch.is-active {
+  flex: 1;
+  border-radius: 3px;
+}
+.menu-detail-area .order-type-area .type-select .tab-switch-box .tab-switch.is-active::after {
+  display: none;
+}
+.menu-detail-area .order-type-area .type-select .tab-switch-box .tab-switch + .tab-switch {
+  position: relative;
+}
+.menu-detail-area .order-type-area .type-select .tab-switch-box .tab-switch + .tab-switch::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: 0;
+  width: 1px;
+  height: 17px;
+  background-color: #e7e7e7;
+}
+.menu-detail-area .order-type-area .type-amount {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu-detail-area .order-type-area .type-amount .title {
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: -0.3px;
+  color: #333;
+}
+.menu-detail-area .order-type-area .btn-order {
+  display: block;
+  margin-top: 20px;
+  width: 100%;
+  line-height: 46px;
+  font-weight: 700;
+  border-radius: 3px;
+  background-color: #01d760;
+  color: #fff;
+  padding: 0 16px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.menu-detail-area .order-type-area .btn-order:disabled {
+  background-color: #c9c9c9;
+  color: #fff;
+}
+
+.menu-review-area .orderer-img-area {
+  padding-bottom: 22px;
+  background-color: #fff;
+}
+.menu-review-area .orderer-img-area .title {
+  padding: 6px 18px 12px;
+}
+.menu-review-area .title {
+  line-height: 22px;
+  font-size: 17px;
+  font-weight: 700;
+  letter-spacing: -0.3px;
+  color: #333;
+}
+.menu-review-area .title .num {
+  color: #01d760;
+  margin-left: 6px;
+}
+.menu-review-area .orderer-pic-list {
+  display: flex;
+}
+.menu-review-area .orderer-pic-item {
+  display: flex;
+}
+.menu-review-area .orderer-pic-item:first-child::before {
+  content: "";
+  width: 18px;
+  height: 100%;
+  display: block;
+}
+.menu-review-area .orderer-pic-item:last-child::after {
+  content: "";
+  width: 18px;
+  height: 100%;
+  display: block;
+}
+.menu-review-area .orderer-pic-item + .orderer-pic-item {
+  margin-left: 1px;
+}
+.menu-review-area .orderer-pic-link {
+  position: relative;
+  display: flex;
+}
+.menu-review-area .orderer-pic-link::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 .container {
