--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1068,13 +1068,6 @@ textarea::-webkit-outer-spin-button {
   color: #fff;
 }
 
-.menu-review-area .orderer-img-area {
-  padding-bottom: 22px;
-  background-color: #fff;
-}
-.menu-review-area .orderer-img-area .title {
-  padding: 6px 18px 12px;
-}
 .menu-review-area .title {
   line-height: 22px;
   font-size: 17px;
@@ -1085,6 +1078,13 @@ textarea::-webkit-outer-spin-button {
 .menu-review-area .title .num {
   color: #01d760;
   margin-left: 6px;
+}
+.menu-review-area .orderer-img-area {
+  padding-bottom: 22px;
+  background-color: #fff;
+}
+.menu-review-area .orderer-img-area .title {
+  padding: 6px 18px 12px;
 }
 .menu-review-area .orderer-pic-list {
   display: flex;
@@ -1119,6 +1119,84 @@ textarea::-webkit-outer-spin-button {
   bottom: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.05);
+}
+.menu-review-area .orderer-review-area {
+  margin-top: 12px;
+  background-color: #fff;
+}
+.menu-review-area .orderer-review-area .title {
+  padding: 16px 18px;
+}
+.menu-review-area .review-list {
+  border-top: 1px solid #f2f4f6;
+}
+.menu-review-area .review-item {
+  padding: 16px 18px;
+  border-bottom: 1px solid #f2f4f6;
+}
+.menu-review-area .review-star {
+  position: relative;
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  font-size: 15px;
+  color: #242424;
+}
+.menu-review-area .ico-star-group {
+  position: relative;
+  display: inline-block;
+  margin-right: 6px;
+  width: 77px;
+  height: 13px;
+  background: url("../images/ico-star-group.svg") no-repeat center left;
+}
+.menu-review-area .ico-star-group-fill {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background: url("../images/ico-star-group-fill.svg") no-repeat center left;
+}
+.menu-review-area .review-text {
+  line-height: 24px;
+  margin-top: 4px;
+  color: #333;
+}
+.menu-review-area .review-info {
+  margin-top: 8px;
+  color: #8f8f8f;
+  font-size: 14px;
+  letter-spacing: -0.3px;
+}
+.menu-review-area .review-date::before {
+  content: "";
+  display: inline-block;
+  margin: 0 8px;
+  width: 1px;
+  height: 12px;
+  background-color: #e1e5e7;
+  vertical-align: middle;
+}
+.menu-review-area .btn-more {
+  width: 100%;
+  height: 50px;
+  font-size: 16px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #424242;
+}
+.menu-review-area .btn-more::after {
+  content: "";
+  margin: 0 0 3px 6px;
+  width: 8px;
+  height: 8px;
+  border-top: 1px solid;
+  border-right: 1px solid;
+  transform: rotate(135deg);
 }
 
 .container {
