--- a/assets/scss/components/detail/_menu_review_area.scss
+++ b/assets/scss/components/detail/_menu_review_area.scss
@@ -1,13 +1,5 @@
 .menu-review-area {
-  .orderer-img-area {
-    padding-bottom: 22px;
-    background-color: #fff;
-
-    .title {
-      padding: 6px $m-padding 12px;
-    }
-  }
-
+  // 공통
   .title {
     line-height: 22px;
     font-size: 17px;
@@ -20,6 +12,16 @@
       margin-left: 6px;
     }
   }
+
+  // 주문자 사진
+  .orderer-img-area {
+    padding-bottom: 22px;
+    background-color: #fff;
+
+    .title {
+      padding: 6px $m-padding 12px;
+    }
+  }  
 
   .orderer-pic-list {
     display: flex;
@@ -62,4 +64,96 @@
       background-color: rgba(0, 0, 0, 0.05);
     }
   }
+
+  // 주문자 리뷰
+  .orderer-review-area{
+    margin-top: 12px;
+    background-color: #fff;
+    .title{
+      padding: 16px $m-padding;
+    }
+  }
+
+  .review-list{
+    border-top: 1px solid $booking-color-border4;
+  }
+
+  .review-item{
+    padding: 16px $m-padding;
+    border-bottom: 1px solid $booking-color-border4;
+  }
+
+  .review-star{
+    position: relative;
+    display: flex;    
+    align-items: center;
+    font-weight: 600;
+    font-size: 15px;
+    color: $booking-color-text2;
+  }
+
+  .ico-star-group{
+    position: relative;
+    display: inline-block;
+    margin-right: 6px;
+    width: 77px;
+    height: 13px;
+    background: url('../images/ico-star-group.svg') no-repeat center left;
+  }
+
+  .ico-star-group-fill{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background: url('../images/ico-star-group-fill.svg') no-repeat center left;
+  }
+
+  .review-text{
+    line-height: 24px;
+    margin-top: 4px;
+    color: $booking-color-text6;
+  }
+
+  .review-info{
+    margin-top: 8px;
+    color: $booking-color-text5;
+    font-size: 14px;
+    letter-spacing: -0.3px;
+  }
+
+  .review-date::before{
+    content: '';
+    display: inline-block;
+    margin: 0 8px;
+    width: 1px;
+    height: 12px;
+    background-color: $booking-color-bg105;
+    vertical-align: middle;
+  }
+
+  .btn-more{
+    width: 100%;
+    height: 50px;
+    font-size: 16px;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $booking-color-text3;
+
+    &::after{
+      content: '';
+      margin: 0 0 3px 6px;
+      width: 8px;
+      height: 8px;
+      border-top: 1px solid; // 색상 지정 안하면 currentColor : 글자색 받아 옴
+      border-right: 1px solid;
+      transform: rotate(135deg);
+    }
+  }
+
+
 }
