--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -163,6 +163,11 @@ textarea::-webkit-outer-spin-button {
   display: none;
 }
 
+body.scroll-off {
+  overflow: hidden;
+  touch-action: none;
+}
+
 .header-area {
   position: fixed;
   top: 0;
@@ -443,6 +448,52 @@ textarea::-webkit-outer-spin-button {
   color: #c9c9c9;
 }
 
+.go-to-top {
+  padding: 16px 0 32px;
+  background-color: #fff;
+  text-align: center;
+}
+.go-to-top .link {
+  display: inline-block;
+  border-radius: 20px;
+  padding: 8px 20px;
+  border: 1px solid #e5e5e5;
+  background-color: #fff;
+  font-weight: 700;
+  font-size: 14px;
+  color: #666;
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.04);
+  text-transform: uppercase;
+}
+.go-to-top .ico-up {
+  position: relative;
+  display: inline-block;
+  margin-left: 4px;
+  width: 10px;
+  height: 10px;
+}
+.go-to-top .ico-up::before {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  border-top: 2px solid #666;
+  border-left: 2px solid #666;
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+.go-to-top .ico-up::after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 50%;
+  width: 2px;
+  height: 9px;
+  background-color: #666;
+  transform: translateX(-50%);
+}
+
 .dimmed-layer {
   position: fixed;
   top: 0;
@@ -451,6 +502,9 @@ textarea::-webkit-outer-spin-button {
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 9999;
+}
+.dimmed-layer.light {
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .order-type-popup {
@@ -863,52 +917,6 @@ textarea::-webkit-outer-spin-button {
   text-align: center;
 }
 
-.go-to-top {
-  padding: 16px 0 32px;
-  background-color: #fff;
-  text-align: center;
-}
-.go-to-top .link {
-  display: inline-block;
-  border-radius: 20px;
-  padding: 8px 20px;
-  border: 1px solid #e5e5e5;
-  background-color: #fff;
-  font-weight: 700;
-  font-size: 14px;
-  color: #666;
-  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.04);
-  text-transform: uppercase;
-}
-.go-to-top .ico-up {
-  position: relative;
-  display: inline-block;
-  margin-left: 4px;
-  width: 10px;
-  height: 10px;
-}
-.go-to-top .ico-up::before {
-  content: "";
-  position: absolute;
-  top: 4px;
-  left: 50%;
-  width: 5px;
-  height: 5px;
-  border-top: 2px solid #666;
-  border-left: 2px solid #666;
-  transform: translate(-50%, -50%) rotate(45deg);
-}
-.go-to-top .ico-up::after {
-  content: "";
-  position: absolute;
-  top: 1px;
-  left: 50%;
-  width: 2px;
-  height: 9px;
-  background-color: #666;
-  transform: translateX(-50%);
-}
-
 .menu-detail-area {
   background-color: #fff;
 }
@@ -1199,10 +1207,234 @@ textarea::-webkit-outer-spin-button {
   transform: rotate(135deg);
 }
 
+.option-popup-area {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 5000;
+}
+.option-popup-area .menu-option-popup {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  max-height: calc(100% - 45px);
+  z-index: 10000;
+  background-color: #f4f7f9;
+}
+.option-popup-area .content-top-pattern {
+  position: absolute;
+  width: 100%;
+  height: 11px;
+  top: -10px;
+  fill: white;
+}
+.option-popup-area .content-top {
+  height: 100px;
+  border-bottom: #ededed;
+  background-color: #fff;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.08);
+  z-index: 1;
+}
+.option-popup-area .content-top .common-inner {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 18px 18px 20px;
+}
+.option-popup-area .content-top .menu-img-area {
+  position: relative;
+  margin-right: 16px;
+  width: 70px;
+  height: 70px;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.option-popup-area .content-top .menu-img-area::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(43, 29, 0, 0.1);
+}
+.option-popup-area .content-top .menu-detail-area {
+  flex: 1;
+  padding-right: 36px;
+}
+.option-popup-area .content-top .menu-name {
+  display: flex;
+  align-items: center;
+  font-weight: 700;
+}
+.option-popup-area .content-top .menu-name .name {
+  font-size: 18px;
+}
+.option-popup-area .content-top .menu-name .badge {
+  margin-left: 6px;
+  padding: 0 7px;
+  border-radius: 8px;
+  font-size: 11px;
+  line-height: 16px;
+  background-color: #333;
+  letter-spacing: -0.3px;
+  color: #fff;
+}
+.option-popup-area .content-top .amount-select {
+  margin-top: 12px;
+}
+.option-popup-area .content-top .btn-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 48px;
+  height: 48px;
+}
+.option-popup-area .content-body {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+.option-popup-area .content-body .option-group {
+  background-color: #fff;
+}
+.option-popup-area .content-body .option-group + .option-group {
+  margin-top: 12px;
+}
+.option-popup-area .content-body .option-title {
+  padding: 18px 18px;
+  border-bottom: 1px dashed #ecf0f2;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 720px;
+}
+.option-popup-area .content-body .option-title .title {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+}
+.option-popup-area .content-body .option-title .badge {
+  margin-right: 8px;
+  padding: 0 4px;
+  border-radius: 3px;
+  background-color: #d0d0d0;
+  color: #fff;
+  font-size: 13px;
+  line-height: 17px;
+}
+.option-popup-area .content-body .option-title .badge.required {
+  background-color: #000;
+}
+.option-popup-area .content-body .option-title .desc {
+  margin-top: 2px;
+  line-height: 24px;
+  font-size: 15px;
+  font-weight: 400;
+}
+.option-popup-area .content-body .option-list {
+  padding: 24px 18px 24px 28px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 720px;
+}
+.option-popup-area .content-body .option-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.option-popup-area .content-body .option-item:not(:first-child) {
+  margin-top: 14px;
+}
+.option-popup-area .content-body .option-item .label {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  font-weight: 17px;
+}
+.option-popup-area .content-body .option-item .label.checked {
+  font-weight: 700;
+}
+.option-popup-area .content-body .option-item .label.checked .price {
+  color: #ff3d3b;
+}
+.option-popup-area .content-body .option-item .label .label-text {
+  margin-right: 8px;
+}
+.option-popup-area .content-body .option-item .label .label-icon {
+  display: inline-flex;
+  flex-shrink: 0;
+  width: 28px;
+  height: 28px;
+  border: 1px solid #e5e5e5;
+  background-color: #fff;
+}
+.option-popup-area .content-body .option-item .input-radio:checked + .label,
+.option-popup-area .content-body .option-item .input-check:checked + .label {
+  font-weight: 700;
+}
+.option-popup-area .content-body .option-item .input-radio + .label .label-icon {
+  border-radius: 100%;
+}
+.option-popup-area .content-body .option-item .input-radio:checked + .label .label-icon {
+  border: 8px solid #01d760;
+}
+.option-popup-area .content-body .option-item .input-check + .label .label-icon {
+  border-radius: 3px;
+}
+.option-popup-area .content-body .option-item .input-check:checked + .label .price {
+  font-weight: 600;
+  color: #ff3d3b;
+}
+.option-popup-area .content-body .option-item .input-check:checked + .label .label-icon {
+  border-color: #01d760;
+  background-color: #01d760;
+  position: relative;
+}
+.option-popup-area .content-body .option-item .input-check:checked + .label .label-icon::before {
+  position: absolute;
+  top: 6px;
+  right: 6px;
+  content: "";
+  width: 14px;
+  height: 9px;
+  border: 2px solid #fff;
+  border-width: 0 0 2px 2px;
+  transform: rotate(-45deg);
+}
+.option-popup-area .content-bottom {
+  padding: 0 10px 10px;
+}
+.option-popup-area .content-bottom .btn-order {
+  display: block;
+  width: 100%;
+  line-height: 52px;
+  border-radius: 3px;
+  font-weight: 700;
+  background-color: #01d760;
+  color: #fff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 720px;
+}
+.option-popup-area .content-bottom .btn-order:disabled {
+  background-color: #c9c9c9;
+  color: #fff;
+}
+
 .container {
+  background-color: #f4f7f9;
+}
+.container:not(.order) {
   padding-top: 94px;
   padding-bottom: 70px;
-  background-color: #f4f7f9;
 }
 
 .common-inner {
