--- a/assets/scss/abstracts/_mixin_common.scss
+++ b/assets/scss/abstracts/_mixin_common.scss
@@ -14,4 +14,10 @@
   -webkit-box-orient: vertical; /* autoprefixer : off */
   // -webkit-box-orient: vertical; box 흐름 vertical 로 제어 , autoprefixer : off 주석 꼭 같이 써주기
 }
+
+@mixin common-inner{
+  margin-left:auto;
+  margin-right:auto;
+  max-width: 720px;
+}
   
