common.scss title replace

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -25,4 +25,4 @@
 @import "./components/order/order_content";
 @import "./components/order/order_content_extra";
 
-@import "./pages/order_page";
+@import "./pages/common";
