--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1429,6 +1429,35 @@ body.scroll-off {
   color: #fff;
 }
 
+.order-form-area .page-title-area {
+  height: 105px;
+  background-image: linear-gradient(264deg, #3accff, #2cec88);
+}
+.order-form-area .page-title-area .title {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 56px;
+  width: 100%;
+  font-size: 20px;
+  font-weight: 700;
+  color: #fff;
+  background-image: linear-gradient(264deg, #3accff, #2cec88);
+}
+.order-form-area .page-title-area .btn-close {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 56px;
+  height: 56px;
+}
+.order-form-area .page-title-area .btn-close .ico-close {
+  width: 18px;
+}
+
 .container {
   background-color: #f4f7f9;
 }
