--- a/assets/scss/components/detail/_menu_review_area.scss
+++ b/assets/scss/components/detail/_menu_review_area.scss
@@ -113,7 +113,7 @@
     background: url('../images/ico-star-group-fill.svg') no-repeat center left;
   }
 
-  .review-text {
+  .review-txt {
     line-height: 24px;
     margin-top: 4px;
     color: $booking-color-text6;
