--- a/assets/scss/components/order/_order_form_area.scss
+++ b/assets/scss/components/order/_order_form_area.scss
@@ -7,6 +7,7 @@
       position: fixed;
       top: 0;
       left: 0;
+      z-index: 1;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -24,6 +25,7 @@
       right: 0;
       width: 56px;
       height: 56px;
+      z-index: 1;
 
       .ico-close{
         width: 18px;
