btn padding edit

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -841,6 +841,11 @@ body.scroll-off {
   counter-reset: #333;
   letter-spacing: -0.3px;
 }
+.menu-list-area .btn-toggle {
+  margin: -16px;
+  padding: 16px;
+  display: flex;
+}
 .menu-list-area .period {
   font-size: 14px;
   letter-spacing: -0.3px;
