--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -503,19 +503,6 @@ body.scroll-off {
   transform: translateX(-50%);
 }
 
-.dimmed-layer {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 9999;
-}
-.dimmed-layer.light {
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
 .order-type-popup {
   position: fixed;
   bottom: 0;
@@ -1226,9 +1213,23 @@ body.scroll-off {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 0;
   overflow: hidden;
+  z-index: 1;
+}
+.option-popup-area.show {
+  height: 100%;
   z-index: 5000;
+}
+.option-popup-area.show .dimmed-layer {
+  opacity: 1;
+}
+.option-popup-area.show .menu-option-popup {
+  transform: translateY(0%);
+}
+.option-popup-area .dimmed-layer {
+  position: absolute;
+  opacity: 0;
 }
 .option-popup-area .menu-option-popup {
   display: flex;
@@ -1239,6 +1240,8 @@ body.scroll-off {
   max-height: calc(100% - 45px);
   z-index: 10000;
   background-color: #f4f7f9;
+  transform: translateY(110%);
+  transition: transform 0.3s ease;
 }
 .option-popup-area .content-top-pattern {
   position: absolute;
@@ -1246,6 +1249,7 @@ body.scroll-off {
   height: 11px;
   top: -10px;
   fill: white;
+  z-index: 2;
 }
 .option-popup-area .content-top {
   height: 100px;
@@ -1914,4 +1918,20 @@ body.scroll-off {
   font-weight: 700;
   color: #fff;
   background-color: #ff61a7;
+}
+
+.dimmed-layer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+}
+.dimmed-layer.hidden {
+  opacity: 0;
+}
+.dimmed-layer.light {
+  background-color: rgba(0, 0, 0, 0.4);
 }/*# sourceMappingURL=styles.css.map */
