--- a/assets/scss/components/detail/_option_popup_area.scss
+++ b/assets/scss/components/detail/_option_popup_area.scss
@@ -3,9 +3,25 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 0;
   overflow: hidden;
-  z-index: 5000;
+  z-index: 1;
+  
+  &.show{
+    height: 100%;
+    z-index: 5000;
+    .dimmed-layer{
+      opacity: 1;
+    }
+    .menu-option-popup {
+      transform: translateY(0%);
+    }
+  }
+
+  .dimmed-layer{
+    position: absolute;
+    opacity: 0;
+  }
 
   .menu-option-popup {
     display: flex;
@@ -16,6 +32,8 @@
     max-height: calc(100% - 45px);
     z-index: 10000;
     background-color: $booking-color-border151;
+    transform: translateY(110%);
+    transition: transform 0.3s ease;
   }
 
   .content-top-pattern {
@@ -24,6 +42,7 @@
     height: 11px;
     top: -10px;
     fill: white; // svg 여서 fill값으로 색상 조정
+    z-index: 2;
   }
 
   .content-top {
